# luckyrobots

./: .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CNAME  LICENSE  README.md  controllable_pawn.uproject  hazel_rpc_pb2.py  hazel_rpc_pb2_grpc.py  main.py  new.py  pawn_controller.py  pyproject.toml  redis_test.py  requirements.txt  run.py  run_depth.py  run_normal.py  run_pixel_streaming_server.ps1  setup.py  test.py  upload_new_pip_version.sh  upload_new_pip_version_win.sh
.cursor/plans/: piper_lego_ppo_demo_bd1814ec.plan.md
.gitea/workflows/: test.yml
.github/workflows/: publish-pypi.yml
Binaries/Win64/: UnrealEditor-Win64-DebugGame.modules  UnrealEditor.modules  controllable_pawnEditor-Win64-DebugGame.target  controllable_pawnEditor.target
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: NewTextureRenderTarget2D.uasset  RT_RobotView.uasset  RT_RobotView_Mat.uasset
Content/Controllable_Pawn/: BP_GameBase.uasset  BP_Pawn.uasset  BP_RobotCharacter.uasset  BP_Spin.uasset  MI_BlackRobot.uasset  MI_WhiteRobot.uasset  M_Clover1.uasset  M_CloverEmissive1.uasset  M_CloverEmissive2.uasset  M_CloverEmissive3.uasset  M_CloverEmissive4.uasset  M_Emissive.uasset  M_Gear.uasset  M_WhiteRobot.uasset  (+11 more)
Legal/: Pre-Funding Employment Agreement.md
MLs/: depth_estimation.py  image_processing.py
Playground/: Info.plist  __init__.py  base64img.txt  baseb64-cv2.py  consume_pixel_stream.py  events.py  lucky_commands.py  main.py  monitor.py  mqtt.py  package-lock.json  package.json  post_listener.js  process_image.py  server.js  stream_images.py  ux.txt
Scripts/: README.md  data_crawler.py
Source/: controllable_pawn.Target.cs  controllable_pawnEditor.Target.cs
app/: Dockerfile  PARQUET_VIEWER_GUIDE.md  README.md  build-and-push.sh  docker-compose.yml  reset-and-rebuild.sh
docs/: CNAME  Makefile  api.rst  architecture.rst  conf.py  examples.rst  getting-started-lerobot.md  index.rst  requirements.txt
examples/: Hashmap.json  README.MD  README.md  actuator_gain_inspector.py  advanced_listener_example.py  basic.py  basic_usage.py  changes.json  client_structure.json  controller.py  dd.py  diff_output.json  dual_policy_remote.py  grpc_agent_example.py  just_lr.py  monitor.py  opencv.py  opencv_example.py  piper_action_smoke_test.py  piper_random_control_demo.py  policy_descriptor_hot_swap.py  requirements-dev.txt  requirements.txt  robot_controller.py  scene_introspection.py  simulated_world.py  single_policy_with_commands.py  train_ppo_piper_lego.py  vlm.py  vlm_gpt.py  yolo-mac.py  yolo.py  yolo_example.py  yolo_mac.py  yolo_mac_example.py
infra/: .env.example  .terraform.lock.hcl  README.md  TROUBLESHOOTING.md  deploy.sh  hetzner-bucket-sync.sh  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
midas/: base_model.py  blocks.py  dpt_depth.py  midas_net.py  midas_net_custom.py  model_loader.py  transforms.py
redis/: Dockerfile  README.md
scripts/: README.md  data_crawler.py
sites/: README.MD
src/: events.py
test/: __init__.py  conftest.py  run_all_tests.py  run_tests.py  test_debug_helpers.py  test_luckyworld_lifecycle.py  test_observation_data.py  test_realtime_control.py  test_remote_control.py  test_simulator_lifecycle.py  test_stress_cases.py  test_utilities.py
tests/: conftest.py  test_client.py  test_mujoco_scene.py  test_portfolio.py  test_robot_controller.py  test_robot_controller_integration.py
(+6002 files in other folders)
