[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luckyrobots"
version = "0.1.68"
description = "Robotics-AI Training in Hyperrealistic Game Environments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Devrim Yasar", email = "braces.verbose03@icloud.com"},
    {name = "Ethan Clark", email = "ethan@luckyrobots.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "watchdog",
    "fastapi",
    "uvicorn[standard]",
    "ultralytics",
    "requests",
    "tqdm",
    "beautifulsoup4",
    "psutil",
    "opencv-python",
    "packaging",
    "websockets",
    "pydantic",
    "numpy",
    "asyncio",
    "websocket-client",
    "msgpack",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/luckyrobots/luckyrobots"
"Bug Tracker" = "https://github.com/luckyrobots/luckyrobots/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/luckyrobots"]

# Include config files as package data
[tool.hatch.build.targets.wheel.force-include]
"src/luckyrobots/config" = "luckyrobots/config"

[tool.hatch.build.targets.sdist]
include = [
    "src/luckyrobots/**/*.py",
    "src/luckyrobots/config/*.yaml",
    "src/luckyrobots/config/__init__.py",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "black",
    "pre-commit",
]
